feat: Utility class SonarQube optimization